# xoxo-ai

./: .gitignore  README.md  package-lock.json  package.json
action_providers/erc721/: constants.py  erc721_action_provider.py  schemas.py
agents/ag2ana/: __main__.py  agent.py  pyproject.toml  remote_agent_connection.py  task_manager.py
agents/ag2jake/: __main__.py  agent.py  pyproject.toml  task_manager.py
agents/ag2robert/: __main__.py  agent.py  pyproject.toml  task_manager.py
agents/ag2tom/: __main__.py  agent.py  pyproject.toml  task_manager.py
anchor/xoxo-nft/: Anchor.toml  Cargo.toml
anchor/xoxo-nft/programs/xoxo-nft/: Cargo.toml
anchor/xoxo-nft/programs/xoxo-nft/src/: lib.rs
app/: page.tsx
app/matches/: page.tsx
app/matching/: page.tsx
app/profile/: page.tsx
app/scan/: page.tsx
contracts/script/: XoxoNFT.s.sol
contracts/src/: XoxoNFT.sol
dalle-nft-api/: Dockerfile  Pipfile  README.md  client.py  main.py  requirements.txt
langchain-eth-account-chatbot/: chatbot.py
logs/: ana_robert_conversation.txt  ana_tom_conversation.txt
