[project]
name = "a2a-samples-ag2maria"
version = "0.1.0"
description = "Maria - A mexican lawyer conversational agents that is also a animal defender and activist"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ag2>=0.8.6",
    "ag2[gemini]>=0.8.6",
    "google-genai>=1.10.0",
    "a2a-samples",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "xoxo",
    "click>=8.0.0",
    "google-adk>=0.0.1",
    "google-generativeai>=0.3.0",
    "pymongo>=4.6.0",
    "asyncio>=3.4.3",
    "uvicorn>=0.23.0",
    "fastapi>=0.104.0",
    "requests>=2.31.0"
]

[tool.uv.sources]
a2a-samples = { git = "https://github.com/google/A2A", subdirectory = "samples/python" }
xoxo = { workspace = true }